# wolfie-airlines

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  resources.rc  vcpkg.json
Projekt/: CMakeLists.txt  (+1 more)
Projekt/airport/: Authentication.cpp  Authentication.h  CMakeLists.txt  EnvParser.h  FlightConnection.cpp  FlightConnection.h  README.md  User.cpp  User.h  functions.cpp  functions.h  main.cpp  printFunctions.cpp  printFunctions.h  vcpkg.json
Projekt/airport/admin/: Admin.cpp  Admin.h  admin.cpp  admin.h
Projekt/airport/admin/admin_functions/: admin_functions.cpp  admin_functions.h  validators.h
Projekt/airport/admin/admin_prints/: admin_prints.cpp  admin_prints.h
Projekt/airport/assets/: airlines_logo.xcf  airlines_logov2.xcf
Projekt/airport/authentication/: Authentication.cpp  Authentication.h  authentication.cpp  authentication.h
Projekt/airport/authentication/auth_functions/: AuthPrintHandler.cpp  AuthPrintHandler.h  user_authentication.cpp  user_authentication.h
Projekt/airport/checkin/: checkin_functions_prints.cpp  checkin_functions_prints.h  checkin_prints.cpp  checkin_prints.h
Projekt/airport/database/csv/: luggage_list.csv
Projekt/airport/database/json/: projekt.flight_connections.json  projekt.math-questions.json
Projekt/airport/env/: EnvParser.cpp  EnvParser.h  env.cpp  env.h
Projekt/airport/flights/: FlightConnection.cpp  FlightConnection.h  flight_connection.cpp  flight_connection.h
Projekt/airport/flights/flights_functions/: flight_functions.cpp  flight_functions.h
Projekt/airport/flights/flights_functions/flight_print_functions/: flight_print_functions.cpp  flight_print_functions.h
Projekt/airport/flights/flights_functions/flight_prints/: flight_print_functions.cpp  flight_print_functions.h  flight_prints.cpp  flight_prints.h
Projekt/airport/functions/: MainHandler.cpp  MainHandler.h  handlingFunctions.cpp  handlingFunctions.h  handling_functions.cpp  helpers.cpp  helpers.h  info_print_functions.cpp  info_print_functions.h  main_handler.cpp  main_handler.h  printFunctions.cpp  printFunctions.h
Projekt/airport/functions/info_prints/: info_prints.cpp  info_prints.h
Projekt/airport/functions/main_prints/: main_prints.cpp  main_prints.h
Projekt/airport/luggage/: Luggage.cpp  Luggage.h  LuggageHandler.cpp  LuggageHandler.h  luggage.cpp  luggage.h  luggage_handler.cpp  luggage_handler.h
Projekt/airport/luggage/item/: Item.cpp  Item.h  ItemHandler.cpp  ItemHandler.h  item.cpp  item.h  item_handler.cpp  item_handler.h
Projekt/airport/luggage/luggage_prints/: luggage_prints.cpp  luggage_prints.h
Projekt/airport/plane/: Plane.cpp  Plane.h  plane.cpp  plane.h
Projekt/airport/plane/plane_prints/: plane_prints.cpp  plane_prints.h
Projekt/airport/qr-code/: qrcode_prints.cpp  qrcode_prints.h
Projekt/airport/qr_code/: qrcode_prints.cpp  qrcode_prints.h
Projekt/airport/server/: README.md  index.js  package-lock.json
Projekt/airport/server/models/: userModel.js
Projekt/airport/server/public/: manifest.json
Projekt/airport/server/src/: firebase.js
Projekt/airport/server/src/css/: AboutMe.css  FAQ.css  Navbar.css
Projekt/airport/server/src/fonts/: fonts.css
Projekt/airport/server/src/pages/: Contact.js
Projekt/airport/tcheckin/: checkin_functions_prints.cpp  checkin_functions_prints.h
Projekt/airport/tickets/: Ticket.cpp  Ticket.h  tickets.cpp  tickets.h
Projekt/airport/tickets/tickets_functions/: ticket_functions.cpp  ticket_functions.h
Projekt/airport/tickets/tickets_functions/tickets_print_functions/: tickets_print_functions.cpp  tickets_print_functions.h
Projekt/airport/tickets/tickets_functions/tickets_prints/: tickets_print_functions.h
Projekt/airport/tickets/tickets_prints/: tickets_print_functions.cpp  tickets_print_functions.h  tickets_prints.cpp  tickets_prints.h
Projekt/airport/tickets/user_tickets/: user_tickets_print_functions.cpp  user_tickets_print_functions.h
Projekt/airport/user/: User.cpp  User.h  user.cpp  user.h
Projekt/airport/user/discounts/: discounts.cpp  discounts.h
Projekt/airport/user/discounts/discounts_prints/: discounts_prints.cpp  discounts_prints.h
Projekt/airport/user/premium_cards/: premium_cards.cpp  premium_cards.h
Projekt/airport/user/premium_cards/premium_cards_prints/: premium_cards_prints.cpp  premium_cards_prints.h
Projekt/airport/user/professions/: profession_choice.cpp  profession_choice.h  profession_handler.cpp  profession_handler.h  user_profession_functions.cpp  user_profession_functions.h
Projekt/airport/user/professions/prints/: profession_prints.cpp  profession_prints.h  profession_prints_n_handler.cpp  profession_prints_n_handler.h
Projekt/airport/user/professions/profession_prints/: profession_prints.cpp  profession_prints.h
Projekt/airport/user/user_functions/: user_print_functions.h  user_settings_functions.cpp  user_settings_functions.h
Projekt/airport/user/user_functions/user_payments/: user_payment_functions.cpp  user_payment_functions.h
Projekt/airport/user/user_functions/user_print_functions/: user_print_functions.cpp  user_print_functions.h
Projekt/airport/user/user_functions/user_prints/: user_print_functions.cpp  user_print_functions.h  user_prints.cpp  user_prints.h
Projekt/airport/user/user_functions/user_settings/: user_payment_functions.cpp  user_payment_functions.h  user_settings_functions.cpp  user_settings_handler.cpp  user_settings_handler.h
Projekt/airport/user/user_functions/user_tickets/: user_tickets_print_functions.cpp  user_tickets_print_functions.h  user_tickets_prints.cpp  user_tickets_prints.h
Projekt/airport/webpage/: package-lock.json  package.json  tailwind.config.js
Projekt/airport/webpage/public/: index.html  manifest.json
Projekt/airport/webpage/src/: App.css  App.js  index.js
Projekt/airport/webpage/src/css/: App.css  Home.css
Projekt/airport/webpage/src/fonts/: fonts.css
airport/: CMakeLists.txt
lab3/: Authors.h  Book.h  Books.h  CMakeLists.txt  Client.h  Clients.h  Employee.h  Employees.h  IBAN.h  Library.h  Person.h  Vector.h  main.cpp
(+142 files in other folders)
