cmake_minimum_required(VERSION 3.27)
project(lab3)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab3
        main.cpp
        Authors.h
        Book.h
        Books.h
        Vector.h
        Person.h
        Employee.h
        IBAN.h
        Client.h
        Employees.h
        Library.h
        Clients.h)
